feat: serialize operation for enabling exporter